satyam : add voice to text and grammer corrector response and POST Method

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,44 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+
+# Django stuff:
+*.log
+*.pot
+*.pyc
+*.mo
+*.pyo
+*.sqlite3
+*.db
+db.sqlite3
+
+# If you use Django migrations:
+*/migrations/__pycache__/
+*/migrations/*.pyc
+*/migrations/*.pyo
+
+# Media & static files (optional, if generated dynamically)
+media/
+staticfiles/
+
+# VS Code settings (optional)
+.vscode/
+
+# Environments
+.env
+.venv/
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
