--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,50 +1,36 @@
 {
-<<<<<<< HEAD
 
-    "name": "speakRight-1",
+    "name": "speakRight",
+
     "version": "1.0.0",
+
     "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "serve": "vite preview"
+
+        "dev": "vite",
+
+        "build": "vite build",
+
+        "serve": "vite preview"
+
     },
+
     "dependencies": {
-      "react": "^18.0.0",
-      "react-dom": "^18.0.0"
+
+        "react": "^18.0.0",
+
+        "react-dom": "^18.0.0",
+
+        "react-icons": "^5.5.0"
+
     },
+
     "devDependencies": {
-      "vite": "^4.0.0",
-      "@vitejs/plugin-react": "^3.0.0"
+
+        "@vitejs/plugin-react": "^3.0.0",
+
+        "vite": "^4.5.12"
+
     }
-  
+
 }
-=======
-  "name": "code_flow",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "axios": "^1.8.4",
-    "react": "^19.0.0",
-    "react-datepicker": "^8.3.0",
-    "react-dom": "^19.0.0"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.21.0",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "vite": "^6.2.5"
-  }
-}
->>>>>>> d2f5a3949aa1aef26da5b12a790eaa9ba6e770ea
+
