--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,11 +16,15 @@
 
     "dependencies": {
 
+        "axios": "^1.8.4",
+
         "react": "^18.0.0",
 
         "react-dom": "^18.0.0",
 
-        "react-icons": "^5.5.0"
+        "react-icons": "^5.5.0",
+
+        "react-router-dom": "^7.5.0"
 
     },
 
